RESOLVED FIXED115036
Fix cast-align WebCore/platform/graphics/GraphicsContext3D.cpp on ARM
https://bugs.webkit.org/show_bug.cgi?id=115036
Summary Fix cast-align WebCore/platform/graphics/GraphicsContext3D.cpp on ARM
Csaba Osztrogonác
Reported 2013-04-23 07:07:24 PDT
warnings: ---------- build/Source/WebCore/platform/graphics/GraphicsContext3D.cpp:1338:13: warning: cast from 'WTF::OwnArrayPtr<unsigned char>::PtrType {aka unsigned char*}' to 'IntermediateSrcType* {aka float*}' increases required alignment of target type [-Wcast-align] build/Source/WebCore/platform/graphics/GraphicsContext3D.cpp:1339:13: warning: cast from 'WTF::OwnArrayPtr<unsigned char>::PtrType {aka unsigned char*}' to 'IntermediateSrcType* {aka float*}' increases required alignment of target type [-Wcast-align] Fix is coming soon.
Attachments
Patch (1.82 KB, patch)
2013-04-23 07:52 PDT, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2013-04-23 07:50:56 PDT
m_unpackedIntermediateSrcData is an uint8_t array allocated with new. DataTypeForFormat<IntermediateSrcFormat>::Type IntermediateSrcType; --> IntermediateSrcType can be uint8_t, float or uint16_t. new should return aligned pointer for these types, so it is safe to ignore this warning and use reinterpret_cast_ptr here.
Csaba Osztrogonác
Comment 2 2013-04-23 07:52:09 PDT
kov's GTK+ EWS bot
Comment 3 2013-04-23 08:39:22 PDT
Csaba Osztrogonác
Comment 4 2013-04-24 06:10:54 PDT
Comment on attachment 199235 [details] Patch Clearing flags on attachment: 199235 Committed r149031: <http://trac.webkit.org/changeset/149031>
Csaba Osztrogonác
Comment 5 2013-04-24 06:10:58 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.