Fix cast-align WebCore/platform/graphics/GraphicsContext3D.cpp on ARM https://bugs.webkit.org/show_bug.cgi?id=115036

Reviewed by Benjamin Poulain.

* platform/graphics/GraphicsContext3D.cpp:
(WebCore):

Canonical link: https://commits.webkit.org/133530@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149031 268f45cc-cd09-0410-ab3c-d52691b4dbfc